This commit updates (again) the position of the start button so that it displays correctly on mobile screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -241,7 +241,6 @@ body {
 
 .start-button {
   font-family: 'Helvetica', 'Arial', sans-serif;
-  display: inline-block;
   font-size: 1em;
   color: #fff;
   margin-top: 570px;
@@ -249,7 +248,6 @@ body {
   outline: none;
   border: none;
   cursor: pointer;
-  position: relative;
   font-weight: 300;
   text-transform: uppercase;
   letter-spacing: 2px;
